// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`row > renders correctly with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__x6hyh50"
      style="--_3mg8xe0: repeat(2, 1fr); --_3mg8xe1: repeat(2, 1fr); --_3mg8xe2: repeat(2, 1fr); --_3mg8xe3: repeat(2, 1fr); --_3mg8xe4: repeat(2, 1fr); --_3mg8xe5: repeat(2, 1fr);"
    >
      <div>
        First col
      </div>
      <div>
        Second col
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`row > renders correctly with responsive values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__x6hyh50 styles_alignItems_flex-end_large__x6hyh515 styles_alignItems_center_medium__x6hyh5g styles_alignItems_flex-start_small__x6hyh5x styles_gap_1.5rem_large__x6hyh52z styles_gap_1rem_medium__x6hyh52s styles_gap_0.5rem_small__x6hyh52l styles_justifyContent_flex-end_large__x6hyh55n styles_justifyContent_center_medium__x6hyh54y styles_justifyContent_flex-start_small__x6hyh55f"
      style="--_3mg8xe0: 2fr 1fr; --_3mg8xe1: 1fr 1fr; --_3mg8xe2: 1fr 2fr; --_3mg8xe6: 2; --_3mg8xe7: 1;"
    >
      <div>
        First col
      </div>
      <div>
        Second col
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`row > renders correctly with specific align 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_gap_0.5rem_xxsmall__x6hyh52j"
      style="--_3mg8xe0: repeat(2, 1fr); --_3mg8xe1: repeat(2, 1fr); --_3mg8xe2: repeat(2, 1fr); --_3mg8xe3: repeat(2, 1fr); --_3mg8xe4: repeat(2, 1fr); --_3mg8xe5: repeat(2, 1fr);"
    >
      <div>
        First col
      </div>
      <div>
        Second col
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`row > renders correctly with specific gap 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__x6hyh50 styles_gap_0.5rem_xxsmall__x6hyh52j"
      style="--_3mg8xe0: repeat(2, 1fr); --_3mg8xe1: repeat(2, 1fr); --_3mg8xe2: repeat(2, 1fr); --_3mg8xe3: repeat(2, 1fr); --_3mg8xe4: repeat(2, 1fr); --_3mg8xe5: repeat(2, 1fr);"
    >
      <div>
        First col
      </div>
      <div>
        Second col
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`row > renders correctly with specific padding 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__x6hyh50 styles_gap_0.5rem_xxsmall__x6hyh52j"
      style="--_3mg8xe0: repeat(2, 1fr); --_3mg8xe1: repeat(2, 1fr); --_3mg8xe2: repeat(2, 1fr); --_3mg8xe3: repeat(2, 1fr); --_3mg8xe4: repeat(2, 1fr); --_3mg8xe5: repeat(2, 1fr); --_3mg8xe6: 10px; --_3mg8xe7: 10px; --_3mg8xe8: 10px; --_3mg8xe9: 10px; --_3mg8xea: 10px; --_3mg8xeb: 10px;"
    >
      <div>
        First col
      </div>
      <div>
        Second col
      </div>
    </div>
  </div>
</DocumentFragment>
`;
